[package]
name = "mdict-rs"
version = "0.1.0"
authors = ["zhimoe"]
edition = "2021"


[dependencies]
# error handling
anyhow = "1"
thiserror = "2"

pretty_env_logger = "0.5"
log = "0.4"
serde_derive = "1.0"
serde = "1"

actix-web = "4"
actix-files = "0.6"

nom = "8"
encoding = "0.2"

adler32 = "1"
regex = "1.5"
rusqlite = { version = "0.35.0", features = ["bundled"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
rand = "0.9"
minilzo-rs = "0.6.0"
ripemd = "0.1.3"
once_cell = "1.19.0"
