[package]
name = "mdict-rs"
version = "0.1.0"
authors = ["zhimoe"]
edition = "2021"


[dependencies]
anyhow = "1"
log = "0.4"
serde_derive = "1.0"
serde = "1"
nom = "8"
encoding = "0.2"
adler32 = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
rand = "0.9"
minilzo-rs = "0.6.0"
ripemd = "0.1.3"
once_cell = "1.19.0"
axum = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["full"] }
regex = "1.9"